--- a/value.html
+++ b/value.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features18-5" aria-expanded="true">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features18-5" aria-expanded="false">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Home</a></li>
                 <li class="nav-item">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section once="footers" class="cid-rJaCqbsz7h" id="footer6-b">
+<section class="engine"><a href="https://mobirise.info/e">make your own website for free</a></section><section once="footers" class="cid-rJaCqbsz7h" id="footer6-b">
 
     
 
