--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header7 cid-rJak12In28 mbr-fullscreen mbr-parallax-background" id="header7-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header7 cid-rJak12In28 mbr-fullscreen mbr-parallax-background" id="header7-1">
 
     
 
@@ -406,9 +406,9 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2pjbvLzLWpvJmiDdiztMJ/FXs3oOKXteF9KdunmvKyi+k2lrPzEUL9H3REX4Qp8BQZSAph79WsevYbxmSoKod+0YXY8iLL2MZ2rSjykftc/hqV8Vt3/imqE97IJiFJPV">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="J1crX/WP6zqCeWmEwOb3ORSHFl32yYAGkTjDnx6xEUT6KF23HsqwotlA4GY0/3E8Al+6TUCOtYQjf08YWTLxF93hvy8bF/uQKD+fkbWE5Ri916IjTDrzr11vWy4Ktxoo">
                     <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! We will contact you for an appoint as soon as possible.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                         </div>
                     </div>
@@ -429,9 +429,7 @@
                             <label for="message-form1-t" class="form-control-label mbr-fonts-style display-7">Message</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-t"></textarea>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center">
-                            <button type="submit" class="btn btn-primary btn-form display-4">SEND FORM</button>
-                        </div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4">SEND FORM</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
