--- a/suite.html
+++ b/suite.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="footers" class="cid-rJaCqbsz7h" id="footer6-7">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rJaCqbsz7h" id="footer6-7">
 
     
 
